host menu reorganized

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -17,24 +17,37 @@
 #	$banner - target port's banner
 
 [hostlist]
-nmap/default = nmap -oX $outfile $rhost
-nmap/intense scan = nmap -T4 -A -v -oX $outfile $rhost
-nmap/intense scan plus_udp = sudo nmap -sS -sU -T4 -A -v -oX $outfile $rhost
-nmap/intense scan all tcp = nmap -p 1-65535 -T4 -A -v -oX $outfile $rhost
-nmap/intense-scan-no-ping = nmap -T4 -A -v -Pn -oX $outfile $rhost
-nmap/ping scan = nmap -sn -oX $outfile $rhost
-nmap/scan full syn = nmap -Pn -sV -sC -A -p- -oX $outfile $rhost
+scan/nmap/default = nmap -oX $outfile $rhost
+scan/nmap/ping scan = nmap -sn -oX $outfile $rhost
+scan/nmap/os identify = sudo nmap -O -oX $outfile $rhost
+scan/nmap/connect scan = nmap -sT $rhost -oX $outfile
+scan/nmap/SYN scan = nmap -sS $rhost -oX $outfile
+scan/nmap/ACK scan = nmap -sA $rhost -oX $outfile
+scan/nmap/UDP scan = nmap -sU $rhost -oX $outfile
+scan/nmap/SCTP init scan = nmap -sY $rhost -oX $outfile
+scan/nmap/Window scan = nmap -sW $rhost -oX $outfile
+scan/nmap/Maimon scan = nmap -sM $rhost -oX $outfile
 
-nmap/full tcp = nmap -Pn -sT -p- -A -oX $outfile $rhost
-nmap/scan udp = sudo nmap -sU -T4 -sC -oX $outfile $rhost
-nmap/os identify = sudo nmap -O -oX $outfile $rhost
-nmap/traceroute geolocate = sudo nmap --traceroute --script traceroute-geolocation.nse -oX $outfile $rhost 
-nmap/dnsbrute = nmap --script dns-brute.nse -oX $outfile $domain
-nmap/hostmap = nmap --script hostmap-bfk.nse -oX $outfile $rhost
+scan/nmap/advanced/quick scan = nmap -T4 -F $rhosts -oX $outfile
+scan/nmap/advanced/intense scan = nmap -T4 -A -v -oX $outfile $rhost
+scan/nmap/advanced/intense scan + udp = sudo nmap -sS -sU -T4 -A -v -oX $outfile $rhost
+scan/nmap/advanced/intense scan all tcp = nmap -p 1-65535 -T4 -A -v -oX $outfile $rhost
+scan/nmap/advanced/intense scan no-ping = nmap -T4 -A -v -Pn -oX $outfile $rhost
+scan/nmap/advanced/slow comprehensive scan = nmap -sS -sU -T4 -A -v -PE -PP -PS80,443 -PA3389 -PU40125 -PY -g 53 --script "default or (discovery and safe)" $rhost -oX $outfile
 
-nmap/vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
+scan/nmap/nse/default = script -sC $rhost -oX $outfile
+scan/nmap/nse/traceroute geolocate = sudo nmap --traceroute --script traceroute-geolocation.nse -oX $outfile $rhost 
+scan/nmap/nse/dnsbrute = nmap --script dns-brute.nse -oX $outfile $domain
+scan/nmap/nse/hostmap = nmap --script hostmap-bfk.nse -oX $outfile $rhost
 
-masscan/full tcp = sudo masscan -oX $outfile -p0-65535 --rate 10000 --banner $rhost
+scan/masscan/full tcp = sudo masscan -oX $outfile -p0-65535 --rate 10000 --banner $rhost
+
+scan/unicornscan/basic scan = sudo unicornscan $rhost
+scan/unicornscan/tcp scan = sudo unicornscan -mT $rhost
+scan/unicornscan/udp scan = sudo unicornscan -mU $rhost
+
+assessment/searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
+assessment/vulners = nmap/nse/vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
 
 get from shodan = python3 $scripts/smap.py --out $outfile $rhost
 get geolocation = curl -vvv "http://www.geoplugin.net/json.gp?ip=$rhost" > $outfile
@@ -42,13 +55,8 @@ get geolocation = curl -vvv "http://www.geoplugin.net/json.gp?ip=$rhost" > $outf
 search on/bugmenot = python3 $scripts/bugmenot.py -s $domain
 search on/xssed = nmap -oX $outfile --script http-xssed.nse $domain
 
-searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 msf/enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
 msf/search_email_collector = msfconsole -n -q -x "use  auxiliary/gather/search_email_collector; set DOMAIN $domain; run; exit;"
-
-unicornscan/basic scan = sudo unicornscan $rhost
-unicornscan/tcp scan = sudo unicornscan -mT $rhost
-unicornscan/udp scan = sudo unicornscan -mU $rhost
 
 run/dmitry = dmitry -winsepo /tmp/dmitry-$domain.txt $domain
 run/dnsrecon = dnsrecon -d $domain -D $wordlists/subdomains.txt -t std
@@ -56,6 +64,8 @@ run/dnsenum = dnsenum $domain -f $wordlists/subdomains.txt
 run/sublist3r = sublist3r -d $domain
 run/knockpy = knockpy $domain
 run/theharvester = theharvester -d $domain -l 500 -b all
+run/webarchive_subdomains = curl -s "http://web.archive.org/cdx/search/cdx?url=*.$domain/*&output=text&fl=original&collapse=urlkey" |sort| sed -e 's_https*://__' -e "s/\/.*//" -e 's/:.*//' -e 's/^www\.//' | sort -u
+
 
 netutils/dig = dig $domain
 netutils/whois/ip = whois $rhost
