fixed vulners nse

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -47,7 +47,7 @@ scan/unicornscan/tcp scan = sudo unicornscan -mT $rhost
 scan/unicornscan/udp scan = sudo unicornscan -mU $rhost
 
 assessment/searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
-assessment/vulners = nmap/nse/vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
+assessment/vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
 
 get from shodan = python3 $scripts/smap.py --out $outfile $rhost
 get geolocation = curl -vvv "http://www.geoplugin.net/json.gp?ip=$rhost" > $outfile
